--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,15 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kaushan+Script&family=Noto+Music&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
+
+body{
+  font-family: "Inter", sans-serif;
+}
+
 .section {
   padding: 50px;
   min-height: 30rem;
@@ -295,4 +303,8 @@ body {
 }
 .alert-sucess {
   border-left: 5px solid #4cbb17;
+}
+.badge{
+  color: white !important;
+  padding: 8px 20px !important;
 }
