Refactor login and registration forms for improved validation and user experience
- Updated login form to include email validation and loader for checking email availability.
- Enhanced registration form with password hashing, improved validation messages, and added confirm password field.
- Removed deprecated logout.php file and integrated logout functionality into includes/logout.php.
- Modified sidebar to use modal for logout confirmation.
- Improved error reporting in index.php for better debugging.
- Added footer inclusion in my-booking.php for consistent layout.
- Updated profile.php to display success messages with improved styling.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,16 +252,18 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 180px;
+  height: 200px;
+  cursor: pointer;
   position: sticky;
   background-image: url(https://images.pexels.com/photos/31779012/pexels-photo-31779012/free-photo-of-white-car-at-night-on-urban-street-in-kokotow.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
 }
 
 .page-header .container h1 {
-  font-size: 1.5rem;
-  color: #e74c3c;
+  font-size: 3rem;
+  color:#cabe15 ;
   text-align: center;
   margin-top: 50px;
+  text-transform: uppercase;
 }
 
 .list-inline-item,
