--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,6 @@ body {
   display: flex;
   flex-direction: column;
 }
-
 .car-info-box {
   display: flex;
   flex-direction: column;
@@ -97,7 +96,7 @@ body {
   color: #555;
 }
 
-.car-specs h5 {
+.car-specs h6 {
   margin: 0;
   font-size: 1.1rem;
 }
@@ -105,17 +104,10 @@ body {
 .car-specs h5 a {
   text-decoration: none;
   color: #333;
+  width: 100%;
+  text-transform: uppercase;
 }
 
-.car-specs h5 a:hover {
-  color: #e74c3c;
-}
-
-.list-price {
-  color: #e74c3c;
-  font-weight: bold;
-  margin: 5px 0;
-}
 
 .car-specs ul {
   list-style: none;
