--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kaushan+Script&family=Noto+Music&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Rubik", sans-serif !important;
 }
 
 .section {
@@ -50,31 +49,25 @@ body {
   flex-direction: column;
 }
 
-.recent-car-list {
+/* .recent-car-list {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   transition: transform 0.3s ease;
   flex: 1;
   display: flex;
   flex-direction: column;
-}
-.car-info-box {
+} */
+/* .car-info-box {
   display: flex;
   flex-direction: column;
   height: 100%;
   background-color: rgb(240, 240, 240);
-}
+} */
 
 .car-image {
   width: 100%;
-  height: 300px;
   object-fit: cover;
   transition: all 1s ease-in-out;
-}
-
-.car-image:hover {
-  transform: scale(1.01);
-  opacity: 0.7;
 }
 
 .car-specs,
@@ -136,25 +129,8 @@ body {
 
 @media (max-width: 767px) {
   .car-listing-grid {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
-
-  .car-image {
-    height: 200px;
-  }
-
-  .car-specs {
-    padding: 10px;
-  }
-
-  .car-specs h5 {
-    font-size: 1rem;
-  }
-
-  /* .car-specs ul {
-    flex-direction: flex;
-    gap: 5px;
-  } */
 }
 
 .testimonial.card {
@@ -241,13 +217,16 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 200px;
+  height: 250px;
   cursor: pointer;
   position: sticky;
   background-image: url(https://images.pexels.com/photos/31779012/pexels-photo-31779012/free-photo-of-white-car-at-night-on-urban-street-in-kokotow.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
 }
 
-.page-header .container h1 {
+.page-heading h2 {
+  color: #f9f9f9;
+}
+.page-heading h1 {
   font-size: 6.2vw;
   color: #f9f9f9;
   text-align: center;
@@ -255,7 +234,7 @@ body {
   text-transform: uppercase;
 }
 
-.list-inline-item,
+.footer .list-inline-item,
 .breadcrumb-item a {
   color: #cabe15 !important;
   text-decoration: underline;
@@ -359,3 +338,4 @@ body {
     box-shadow: 0 0 0 0 rgba(255, 76, 76, 0);
   }
 }
+
