--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 body {
   font-family: "Rubik", sans-serif !important;
 }
@@ -287,15 +287,15 @@ body {
 }
 
 .alert-warning {
-  border-left: #cabe15 5px solid;
+  border-left: #cabe15 5px solid !important;
 }
 
 .alert-danger {
-  border-left: #e74c3c 5px solid;
+  border-left: #e74c3c 5px solid !important;
 }
 
 .alert-sucess {
-  border-left: 5px solid #4cbb17;
+  border-left: 5px solid #4cbb17 !important;
 }
 
 .badge {
@@ -338,4 +338,3 @@ body {
     box-shadow: 0 0 0 0 rgba(255, 76, 76, 0);
   }
 }
-
